Fullscreen video does not display on platforms without accelerated video rendering https://bugs.webkit.org/show_bug.cgi?id=145118

In order to paint video contents in fullscreen mode, add supportsAcceleratedRendering condition.

Patch by Daegyu Lee <daegyu.lee@navercorp.com> on 2015-05-26
Reviewed by Simon Fraser.

* rendering/RenderVideo.cpp:
(WebCore::RenderVideo::paintReplaced):

Canonical link: https://commits.webkit.org/163391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184875 268f45cc-cd09-0410-ab3c-d52691b4dbfc